# NexusEngine-KitUniverse

./: .gitignore  README.md  goal.md  memory.md  pyproject.toml
.agent/: change-log.md  feedback.md  goal.md  intention.md  memory.md  start-here.md  workflow.md
.agent/feedback-packets/: 2026-07-08-chain-domain-list-model-quality.md  README.md
.agent/goal-packets/: README.md  kit-universe-1000.md
buckets/smoke-bucket/: bucket.json
kituniverse_harness/: __init__.py  buckets.py  chains.py  cli.py  ingestion.py  providers.py  runtime_proof.py  smart_router.py
workflow_harnesses/: __init__.py
workflow_harnesses/category_discovery/: README.md  __init__.py  workflow_category_discovery.py
workflow_harnesses/chainstormer/: README.md  __init__.py  workflow_chainstormer.py
workflow_harnesses/domain_discovery/: README.md  __init__.py  workflow_domain_discovery.py
workflow_harnesses/dsk_domain_translator/: README.md  __init__.py  workflow_dsk_domain_translator.py
workflow_harnesses/fractal_kit_pipeline/: README.md  __init__.py  artifact_schema_index_stage.py  atomic_filter_audit_stage.py  atomic_filter_stage.py  build_batch_dry_run_stage.py  build_batch_manifest_stage.py  build_batch_packet_stage.py  build_batch_replay_smoke_stage.py  build_promotion_index_stage.py  build_work_order_stage.py  dependency_graph_audit_stage.py  diversity_audit_stage.py  domain_canonicalization_audit_stage.py  domain_canonicalization_stage.py  domain_merge_input_audit_stage.py  domain_merge_review.py  downstream_build_chain_integrity_stage.py  expansion_stage.py  feed_forward_artifact_integrity_stage.py  final_bucket_reconciliation_stage.py  final_lineage_integrity_stage.py  final_output_stage.py  final_quality_gate_stage.py  first_stage_breadth_audit_stage.py  handoff_manifest_stage.py  idea_matrix_audit_stage.py  idea_matrix_stage.py  kit_canonicalization_stage.py  kit_contract.py  kit_merge_review.py  merge_review_coverage_stage.py  objective_audit_stage.py  playwright_slot_smoke.mjs  promoted_batch_stage.py  prompt_control_indirection_stage.py  reveal_reduce_stage.py  revealed_reduced_audit_stage.py  run_artifacts.py  setup_stage.py  (+10 more)
workflow_harnesses/guided_kit_builder/: README.md  __init__.py  benchmark_cases.py  codex_cli_review.py  contract.py  post_codex_validation.py  universe_ledger.py  workflow_guided_kit_builder.py
workflow_harnesses/rawg_chainstorm/: README.md  (+4 more)
(+89 files in other folders)
