[project]
name = "nexusengine-kituniverse"
version = "0.1.0"
description = "Simple chained harnesses for NexusEngine KitUniverse."
requires-python = ">=3.9"

[project.scripts]
kituniverse = "kituniverse_harness.cli:main"
chain-ask-for-domain-list = "kituniverse_harness.cli:chain_ask_for_domain_list_main"
ask-provider = "kituniverse_harness.cli:ask_provider_main"
workflow-chainstormer = "workflow_harnesses.chainstormer.workflow_chainstormer:main"
bucket-service = "kituniverse_harness.buckets:main"
ingestion-service = "kituniverse_harness.ingestion:main"
workflow-dsk-domain-translator = "workflow_harnesses.dsk_domain_translator.workflow_dsk_domain_translator:main"
workflow-domain-discovery = "workflow_harnesses.domain_discovery.workflow_domain_discovery:main"
workflow-subdomain-discovery = "workflow_harnesses.subdomain_discovery.workflow_subdomain_discovery:main"
workflow-category-discovery = "workflow_harnesses.category_discovery.workflow_category_discovery:main"
workflow-matrix-node-explorer = "workflow_harnesses.matrix_node_explorer.workflow_matrix_node_explorer:main"
workflow-fractal-kit-pipeline = "workflow_harnesses.fractal_kit_pipeline.workflow_fractal_kit_pipeline:main"
workflow-guided-kit-builder = "workflow_harnesses.guided_kit_builder.workflow_guided_kit_builder:main"
workflow-kit-universe-batch = "workflow_harnesses.kit_universe_batch.workflow_kit_universe_batch:main"
workflow-rawg-capability-pipeline = "workflow_harnesses.rawg_capability_pipeline.worker:main"
workflow-rawg-domain-loop = "workflow_harnesses.rawg_domain_loop.workflow_rawg_domain_loop:main"
workflow-rawg-chainstorm = "workflow_harnesses.rawg_chainstorm.workflow_rawg_chainstorm:main"
workflow-rawg-matrix-optimizer = "workflow_harnesses.rawg_matrix_optimizer.workflow_rawg_matrix_optimizer:main"
workflow-rawg-matrix-production = "workflow_harnesses.rawg_matrix_optimizer.production:main"
workflow-rawg-matrix-cluster = "workflow_harnesses.rawg_matrix_optimizer.clustering:main"
workflow-rawg-fastlane = "workflow_harnesses.rawg_fastlane.workflow:main"
workflow-rawg-exhaustive = "workflow_harnesses.rawg_exhaustive.workflow:main"
kituniverse-operator = "workflow_harnesses.rawg_capability_pipeline.operator:main"
kituniverse-runtime-proof = "kituniverse_harness.runtime_proof:main"
